--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ ul  {
     top:0;
     left:50%;
     right:10%;
-    padding-bottom:34vh;
+    padding-bottom:22vh;
 
     font-size:1.25vw;
     line-height:180%;
@@ -125,52 +125,255 @@ ul  {
     font-family: 'Roboto Condensed', sans-serif;
     margin-top: 42%;
     margin-bottom: 74%;
-    color: #bebebe;
+    color: #e2e2e2;
+    overflow: hidden;
 }
 
-.skills-tree {
-    text-transform: uppercase;
-    font-weight: 400;
+/* SKILL BAR SECTION */
+.container div {
+    margin:10px 0px;
+	padding:2px 10px;
+	color:white;
+}
+.container {
+    width: 100%;
+    font-size:1.25vw;
 }
 
-.skills-tree li {
-    display: block;
-    background: #eaeaea;
-    margin-bottom: 1rem;
+.skills .wrapper {
+    background-color: #e2e2e2;
+	margin:0px;
+    padding:0px;
+    font-weight: 300;
 }
 
-
-.work-tree {
-
+.wrapper span {
+    float: right;
+    margin-top: 2px;
 }
 
-.work-tree li {
-    display: inline-block;
+.htm,
+.css,
+.js,
+.jq,
+.sass,
+.bt {
+    background: #222;
 }
 
-.work-tree a {
-    display: block;
-    padding: 20px 35px;
-    border:1px solid #222;
+.htm,
+.css,
+.js,
+.jq,
+.sass,
+.bt {
+    width: 27%;
+}
+
+.htm1 {
+    width: 80%;
+    transition: 2s;
+    background-color: #222;
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -webkit-transform: translate3d(0,0,0);
+}
+
+.css1 {
+    width: 75%;
+    transition: 2s;
+    background-color: #222;
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -webkit-transform: translate3d(0,0,0);
+}
+
+.js1 {
+    width: 40%;
+    transition: 2s;
+    background-color: #222;
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -webkit-transform: translate3d(0,0,0);
+}
+
+.jq1 {
+    width: 30%;
+    transition: 2s;
+    background-color: #222;
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -webkit-transform: translate3d(0,0,0);
+}
+
+.sass1 {
+    width: 75%;
+    transition: 2s;
+    background-color: #222;
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -webkit-transform: translate3d(0,0,0);
+}
+
+.bt1 {
+    width: 65%;
+    transition: 2s;
+    background-color: #222;
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -webkit-transform: translate3d(0,0,0);
+}
+
+/* WORK SECTION PORTFOLIO */
+
+.work a {
+    font-size:1.25vw;
 }
 
 
 
 .contacts-links li {
     display: inline-block;
-    padding: 5px 15px;
-    background: #222222;
-    
 }
 
-.contacts-links i {
+
+
+
+.contacts-links a {
+    display: block;
+    padding: 10px 25px;
+    background: #222222;
     color: #fff;
     font-size:1.25vw;
+    border: 2px solid #222;
+    transition: ease-in-out .3s;
 }
 
-.contacts-links li:hover {
-    background: white;
-    color: #222222;
-    font-size:1.25vw;
+.contacts-links li:not(:last-child) {
+    margin-right: 10px;
 }
 
+.contacts-links a:hover {
+    background: #e2e2e2;
+    color: #222;
+    border: 2px solid #222;
+}
+
+.contacts p {
+    margin-bottom: 6%;
+}
+
+
+.animate1 {
+    -webkit-animation:animate1 1.2s cubic-bezier(.2,.6,.2,1);
+    -moz-animation:animate1 1.2s cubic-bezier(.2,.6,.2,1);
+    animation:animate1 1.2s cubic-bezier(.2,.6,.2,1);
+    -webkit-animation-fill-mode:backwards;
+    -moz-animation-fill-mode:backwards;
+    animation-fill-mode:backwards;
+}
+
+.animate2 {
+    -webkit-animation:animate2 1.2s cubic-bezier(.2,.6,.2,1);
+    -moz-animation:animate2 1.2s cubic-bezier(.2,.6,.2,1);
+    animation:animate2 1.2s cubic-bezier(.2,.6,.2,1);
+    -webkit-animation-fill-mode:backwards;
+    -moz-animation-fill-mode:backwards;
+    animation-fill-mode:backwards;
+}
+
+@-webkit-keyframes animate1{
+    0%{-webkit-transform:translateY(100%)}
+    100%{-webkit-transform:translateY(0)}
+}
+
+@keyframes animate1{
+    0%{transform:translateY(100%)}
+    100%{transform:translateY(0)}
+}
+
+@-webkit-keyframes animate2{
+    0%{transform:translateX(45%)}
+    100%{transform:translateX(0)}
+}
+
+@keyframes animate2{
+    0%{transform:translateX(45%)}
+    100%{transform:translateX(0)}
+}
+
+
+.delay{
+    -webkit-animation-delay:.3s;
+    animation-delay:.3
+}
+
+
+
+
+
+/* .about:after {
+    animation: grain 1s steps(10) infinite;
+    background-image: url(../img/grains.png);
+    content: "";
+    height: 300%;
+    left: -50%;
+    opacity: 0.28;
+    position: fixed;
+    top: -110%;
+    width: 300%;
+}
+
+@keyframes grain {
+    0%, 100% {transform: translate(0, 0); }
+    10% {transform: translate(-5%, -10%); }
+    20% {transform: translate(-15%, 5%); }
+    30% {transform: translate(7%, -25%); }
+    40% {transform: translate(-5%, 25%); }
+    50% {transform: translate(-15%, 10%); }
+    60% {transform: translate(15%, 0%); }
+    70% {transform: translate(0%, 015%); }
+    80% {transform: translate(3%, 35%); }
+    90% {transform: translate(-10%, 10%); }
+} */
+
+
+@media screen and (max-width:667px){
+    .big {
+        display: none;
+    }
+    h1{
+        font-size:68px;
+        font-size:18vw
+    }
+    h2{
+        font-size:24px;
+        font-size:6.4vw
+    }
+    p{
+        font-size:18px;
+        font-size:4.8vw
+    }
+
+    .skills div {
+        font-size: 4vw;
+        line-height: 180%;
+    }
+
+    .work a {
+        font-size: 4.8vw;
+        line-height: 180%;
+    }
+
+    .contacts a {
+        font-size: 4.8vw;
+        line-height: 180%;
+    }
+    .about{
+        top:100vh;
+        left:0;
+        right:0;
+        background:#fff;
+        padding:10%
+    }
+}
