--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700&subset=cyrillic');
 
 a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,
-video{
+video {
     margin:0;
     padding:0;
     border:0;
@@ -67,14 +67,14 @@ h1{
     left:10%
 }
 
-h2{
+h2 {
     font-size:2.2vw;
     line-height:140%;
     font-family:700;
     margin-bottom:5%
 }
 
-p{
+p {
     font-size:1.25vw;
     line-height:180%;
 }
@@ -83,7 +83,11 @@ section {
     margin-bottom: 15%;
 }
 
-.section-title{
+ul {
+    list-style: none;
+}
+
+.section-title {
     display: inline-block;
 }
 
@@ -95,18 +99,13 @@ section {
     width: inherit;
 }
 
-
-ul  {
-    list-style: none;
-}
-
-.text{
+.text {
     position:relative;
     display:block;
     overflow:hidden
 }
 
-.about{
+.about {
     position:absolute;
     top:0;
     left:50%;
@@ -129,15 +128,61 @@ ul  {
     overflow: hidden;
 }
 
+.animate1 {
+    -webkit-animation:animate1 1.2s cubic-bezier(.2,.6,.2,1);
+    -moz-animation:animate1 1.2s cubic-bezier(.2,.6,.2,1);
+    animation:animate1 1.2s cubic-bezier(.2,.6,.2,1);
+    -webkit-animation-fill-mode:backwards;
+    -moz-animation-fill-mode:backwards;
+    animation-fill-mode:backwards;
+}
+
+.animate2 {
+    -webkit-animation:animate2 1s cubic-bezier(.2,.6,.2,1);
+    -moz-animation:animate2 1s cubic-bezier(.2,.6,.2,1);
+    animation:animate2 1s cubic-bezier(.2,.6,.2,1);
+    -webkit-animation-fill-mode:backwards;
+    -moz-animation-fill-mode:backwards;
+    animation-fill-mode:backwards;
+}
+
+@-webkit-keyframes animate1{
+    0%{-webkit-transform:translateY(100%)}
+    100%{-webkit-transform:translateY(0)}
+}
+@keyframes animate1{
+    0%{transform:translateY(100%)}
+    100%{transform:translateY(0)}
+}
+
+@-webkit-keyframes animate2{
+    0%{transform:translateX(-100%)}
+    65%{transform: translateX(3%)}
+    80%{transform: translateX(-1%)}
+    100%{transform:translateX(0)}
+}
+@keyframes animate2{
+    0%{transform:translateX(-100%)}
+    65%{transform: translateX(3%)}
+    80%{transform: translateX(-1%)}
+    100%{transform:translateX(0)}
+}
+
+.delay{
+    -webkit-animation-delay:.3s;
+    animation-delay:.3
+}
+
 /* SKILL BAR SECTION */
+.container {
+    width: 100%;
+    font-size:1.25vw;
+}
+
 .container div {
     margin:10px 0px;
 	padding:2px 10px;
 	color:white;
-}
-.container {
-    width: 100%;
-    font-size:1.25vw;
 }
 
 .skills .wrapper {
@@ -159,14 +204,6 @@ ul  {
 .sass,
 .bt {
     background: #222;
-}
-
-.htm,
-.css,
-.js,
-.jq,
-.sass,
-.bt {
     width: 27%;
 }
 
@@ -228,16 +265,27 @@ ul  {
 
 .work a {
     font-size:1.25vw;
+    display: block;
+    height: 10vh;
+    padding-top: 5vh;
+    background: #222;
+    color: #fff;
+    text-align: center;
+}
+.work-tree li {
+    display: inline-block;
+    width: 49%;
+    margin-bottom: .3vw;
 }
 
-
+/* CONTACTS */
 
 .contacts-links li {
     display: inline-block;
 }
-
-
-
+.contacts-links li:not(:last-child) {
+    margin-right: 10px;
+}
 
 .contacts-links a {
     display: block;
@@ -248,11 +296,6 @@ ul  {
     border: 2px solid #222;
     transition: ease-in-out .3s;
 }
-
-.contacts-links li:not(:last-child) {
-    margin-right: 10px;
-}
-
 .contacts-links a:hover {
     background: #e2e2e2;
     color: #222;
@@ -263,79 +306,6 @@ ul  {
     margin-bottom: 6%;
 }
 
-
-.animate1 {
-    -webkit-animation:animate1 1.2s cubic-bezier(.2,.6,.2,1);
-    -moz-animation:animate1 1.2s cubic-bezier(.2,.6,.2,1);
-    animation:animate1 1.2s cubic-bezier(.2,.6,.2,1);
-    -webkit-animation-fill-mode:backwards;
-    -moz-animation-fill-mode:backwards;
-    animation-fill-mode:backwards;
-}
-
-.animate2 {
-    -webkit-animation:animate2 1.2s cubic-bezier(.2,.6,.2,1);
-    -moz-animation:animate2 1.2s cubic-bezier(.2,.6,.2,1);
-    animation:animate2 1.2s cubic-bezier(.2,.6,.2,1);
-    -webkit-animation-fill-mode:backwards;
-    -moz-animation-fill-mode:backwards;
-    animation-fill-mode:backwards;
-}
-
-@-webkit-keyframes animate1{
-    0%{-webkit-transform:translateY(100%)}
-    100%{-webkit-transform:translateY(0)}
-}
-
-@keyframes animate1{
-    0%{transform:translateY(100%)}
-    100%{transform:translateY(0)}
-}
-
-@-webkit-keyframes animate2{
-    0%{transform:translateX(45%)}
-    100%{transform:translateX(0)}
-}
-
-@keyframes animate2{
-    0%{transform:translateX(45%)}
-    100%{transform:translateX(0)}
-}
-
-
-.delay{
-    -webkit-animation-delay:.3s;
-    animation-delay:.3
-}
-
-
-
-
-
-/* .about:after {
-    animation: grain 1s steps(10) infinite;
-    background-image: url(../img/grains.png);
-    content: "";
-    height: 300%;
-    left: -50%;
-    opacity: 0.28;
-    position: fixed;
-    top: -110%;
-    width: 300%;
-}
-
-@keyframes grain {
-    0%, 100% {transform: translate(0, 0); }
-    10% {transform: translate(-5%, -10%); }
-    20% {transform: translate(-15%, 5%); }
-    30% {transform: translate(7%, -25%); }
-    40% {transform: translate(-5%, 25%); }
-    50% {transform: translate(-15%, 10%); }
-    60% {transform: translate(15%, 0%); }
-    70% {transform: translate(0%, 015%); }
-    80% {transform: translate(3%, 35%); }
-    90% {transform: translate(-10%, 10%); }
-} */
 
 
 @media screen and (max-width:667px){
@@ -363,6 +333,8 @@ ul  {
     .work a {
         font-size: 4.8vw;
         line-height: 180%;
+        height: 50px;
+        padding-top: 20px;
     }
 
     .contacts a {
